@@ -1,3 +1,10 @@
+2008-10-09  Callum McKenzie  <callum@spooky-possum.org>
+
+	* stickynotes.c:
+	* stickynotes_applet_callbacks.c:
+	* stickynotes_applet.[ch]: Patch from Josselin Mouette to hide the
+	stickynotes when the applet button is pressed. See bug 505475.
+
 2008-09-30  Callum McKenzie  <callum@spooky-possum.org>
 
 	* Makefile.am (install-data-local): Remove the use of the
